--- a/my-aktion/src/main/webapp/aktionEdit.xhtml
+++ b/my-aktion/src/main/webapp/aktionEdit.xhtml
@@ -9,7 +9,7 @@
 			<h:outputText value="#{aktionEditController.title}" />
 		</h1>
 
-		<h:form>
+		<h:form acceptcharset="ISO-8859-1">
 			<h:panelGrid columns="3">
 				<f:facet name="header">Allgemein</f:facet>
 
