--- a/my-aktion/src/main/webapp/geldSpenden.xhtml
+++ b/my-aktion/src/main/webapp/geldSpenden.xhtml
@@ -30,7 +30,7 @@
 	<h:message for="bgColor" style="color: red;" />
 	<h:message for="textColor" style="color: red;" />
 	<h:message for="aktionId" style="color: red;" />
-	<h:form>
+	<h:form acceptcharset="ISO-8859-1">
 
 		<h:panelGrid columns="3">
 			<h:outputLabel value="Name:"></h:outputLabel>
