--- a/my-aktion/src/main/webapp/geldSpenden.xhtml
+++ b/my-aktion/src/main/webapp/geldSpenden.xhtml
@@ -5,7 +5,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
-	<title>Geld Spenden</title>
+	<title>Geld spenden</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<h:outputStylesheet name="css/screen.css" />
 	<f:metadata>
@@ -24,7 +24,7 @@
 </h:head>
 <h:body
 	style="background-color: ##{geldSpendenController.bgColor}; color: ##{geldSpendenController.textColor}">
-	<h1>Geld Spenden</h1>
+	<h1>Geld spenden</h1>
 
 	<h:messages globalOnly="true" />
 	<h:message for="bgColor" style="color: red;" />
