Entfernung der BIC (Ab 1. Februar 2014 fuer nationale Zahlungen ausreichend, SEPA-Umstellung)

--- a/my-aktion/src/main/webapp/spendeList.xhtml
+++ b/my-aktion/src/main/webapp/spendeList.xhtml
@@ -7,9 +7,8 @@
 	<ui:define name="content">
 		<h1>Spenderliste "<h:outputText value="#{spendeListController.aktion.name}" />"</h1>
 		
-		<h2>Empfängerkonto: <h:outputText value="#{spendeListController.aktion.konto.name}" />
-		, Konto-Nr.: <h:outputText value="#{spendeListController.aktion.konto.iban}" />,
-		BLZ <h:outputText value="#{spendeListController.aktion.konto.bic}" />,
+		<h2>Empfängerkonto: <h:outputText value="#{spendeListController.aktion.konto.name}" />,
+		IBAN: <h:outputText value="#{spendeListController.aktion.konto.iban}" />,
 		<h:outputText value="#{spendeListController.aktion.konto.nameDerBank}" /></h2>
 
 		<h:form>
@@ -25,12 +24,6 @@
 						<h:outputText value="IBAN" />
 					</f:facet>
 					<h:outputText value="#{spende.konto.iban}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">
-						<h:outputText value="BIC" />
-					</f:facet>
-					<h:outputText value="#{spende.konto.bic}" />
 				</h:column>
 				<h:column>
 					<f:facet name="header">
