--- a/my-aktion/src/main/webapp/aktionEdit.xhtml
+++ b/my-aktion/src/main/webapp/aktionEdit.xhtml
@@ -9,7 +9,7 @@
 			<h:outputText value="#{aktionProducer.addMode ? 'Neue Aktion anlegen' : 'Aktionsdaten editieren'}" />
 		</h1>
 
-		<h:form acceptcharset="ISO-8859-1">
+		<h:form>
 			<h:panelGrid columns="3">
 				<f:facet name="header">Allgemein</f:facet>
 
