--- a/my-aktion/src/main/webapp/listDonations.xhtml
+++ b/my-aktion/src/main/webapp/listDonations.xhtml
@@ -5,37 +5,37 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	template="/WEB-INF/templates/default.xhtml">
 	<ui:define name="content">
-		<h1>Spenderliste "<h:outputText value="#{aktionProducer.selectedAktion.name}" />"</h1>
+		<h1>Spenderliste "<h:outputText value="#{campaignProducer.selectedCampaign.name}" />"</h1>
 		
-		<h2>Empfängerkonto: <h:outputText value="#{aktionProducer.selectedAktion.konto.name}" />,
-		IBAN: <h:outputText value="#{aktionProducer.selectedAktion.konto.iban}" />,
-		<h:outputText value="#{aktionProducer.selectedAktion.konto.nameDerBank}" /></h2>
+		<h2>Empfängerkonto: <h:outputText value="#{campaignProducer.selectedCampaign.account.name}" />,
+		IBAN: <h:outputText value="#{campaignProducer.selectedCampaign.account.iban}" />,
+		<h:outputText value="#{campaignProducer.selectedCampaign.account.nameOfBank}" /></h2>
 
 		<h:form>
-			<h:dataTable value="#{aktionProducer.selectedAktion.spenden}" var="spende">
+			<h:dataTable value="#{campaignProducer.selectedCampaign.donations}" var="donation">
 				<h:column>
 					<f:facet name="header">
 						<h:outputText value="Name" />
 					</f:facet>
-					<h:outputText value="#{spende.spenderName}" />
+					<h:outputText value="#{donation.donorName}" />
 				</h:column>
 				<h:column>
 					<f:facet name="header">
 						<h:outputText value="IBAN" />
 					</f:facet>
-					<h:outputText value="#{spende.konto.iban}" />
+					<h:outputText value="#{donation.account.iban}" />
 				</h:column>
 				<h:column>
 					<f:facet name="header">
 						<h:outputText value="Name der Bank" />
 					</f:facet>
-					<h:outputText value="#{spende.konto.nameDerBank}" />
+					<h:outputText value="#{donation.account.nameOfBank}" />
 				</h:column>
 				<h:column>
 					<f:facet name="header">
 						<h:outputText value="Spendenbetrag" />
 					</f:facet>
-					<h:outputText value="#{spende.betrag}">
+					<h:outputText value="#{donation.amount}">
 						<f:convertNumber type="currency" currencyCode="EUR"/>
 					</h:outputText>
 				</h:column>
@@ -43,17 +43,17 @@
 					<f:facet name="header">
 						<h:outputText value="Quittung" />
 					</f:facet>
-					<h:outputText value="#{spende.quittung ? 'ja' : 'nein'}" />
+					<h:outputText value="#{donation.receiptRequested ? 'ja' : 'nein'}" />
 				</h:column>
 				<h:column>
 					<f:facet name="header">
 						<h:outputText value="Status" />
 					</f:facet>
-					<h:outputText value="#{spendeListController.convertStatus(spende.status)}" />
+					<h:outputText value="#{listDonationsController.convertStatus(donation.status)}" />
 				</h:column>
 			</h:dataTable>
 			<h:commandButton value="OK"
-				action="#{spendeListController.doOk}" />
+				action="#{listDonationsController.doOk}" />
 		</h:form>
 	</ui:define>
 </ui:composition>
