--- a/my-aktion/src/main/webapp/editDonationForm.xhtml
+++ b/my-aktion/src/main/webapp/editDonationForm.xhtml
@@ -5,13 +5,13 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	template="/WEB-INF/templates/default.xhtml">
 	<ui:define name="content">
-		<h1>Spendenformular bearbeiten</h1>
+		<h1><h:outputText value="#{msg['editDonationForm.edit_donation_form']}" /></h1>
 
 		<h:form>
 
 			<h:panelGrid columns="2">
 
-				<h:outputLabel value="Hintergrundfarbe:"></h:outputLabel>
+				<h:outputLabel value="#{msg['editDonationForm.background_color']}:"></h:outputLabel>
 				<h:selectOneMenu id="bgColor" 
 					value="#{editDonationFormController.bgColor}">
 					<f:selectItem itemLabel="#FFFFFF" itemValue="FFFFFF" />
@@ -20,7 +20,7 @@
 					<f:ajax render="url"/>
 				</h:selectOneMenu>
 
-				<h:outputLabel value="Textfarbe:"></h:outputLabel>
+				<h:outputLabel value="#{msg['editDonationForm.text_color']}:"></h:outputLabel>
 				<h:selectOneMenu id="textColor" 
 					value="#{editDonationFormController.textColor}"
 					 >
@@ -30,7 +30,7 @@
 					<f:ajax render="url"/>
 				</h:selectOneMenu>
 
-				<h:outputLabel value="URL des Formulars:"></h:outputLabel>
+				<h:outputLabel value="#{msg['editDonationForm.form_url']}:"></h:outputLabel>
 				<h:inputTextarea id="url" rows="6" cols="30" readonly="true"
 					value="#{editDonationFormController.url}" />
 			</h:panelGrid>
