--- a/my-aktion/src/main/webapp/editCampaign.xhtml
+++ b/my-aktion/src/main/webapp/editCampaign.xhtml
@@ -6,27 +6,27 @@
 	template="/WEB-INF/templates/default.xhtml">
 	<ui:define name="content">
 		<h1>
-			<h:outputText value="#{campaignProducer.addMode ? 'Neue Aktion anlegen' : 'Aktionsdaten editieren'}" />
+			<h:outputText value="#{campaignProducer.addMode ? msg['editCampaign.add_new_campaign'] : msg['editCampaign.edit_campaign']}" />
 		</h1>
 
 		<h:form>
 			<h:panelGrid columns="3">
-				<f:facet name="header">Allgemein</f:facet>
+				<f:facet name="header">#{msg['editCampaign.general']}</f:facet>
 
-				<h:outputLabel value="Name:"></h:outputLabel>
+				<h:outputLabel value="#{msg['editCampaign.name']}:"></h:outputLabel>
 				<h:inputText id="a_name" value="#{campaignProducer.selectedCampaign.name}"
-					validatorMessage="Der Name einer Aktion muss min. 4 und darf max. 30 Zeichen lang sein.">
-					<f:passThroughAttribute name="placeholder" value="Name der Spendenaktion" />
+					validatorMessage="#{msg['editCampaign.campaign_name_validation']}">
+					<f:passThroughAttribute name="placeholder" value="#{msg['editCampaign.name_of_the_campaign']}" />
 					<f:validateRequired />
 					<f:validateLength minimum="4" maximum="30" />
 				</h:inputText>
 				<h:message for="a_name" style="color: red;" />
 
-				<h:outputLabel value="Spendenziel:"></h:outputLabel>
+				<h:outputLabel value="#{msg['editCampaign.target_amount']}:"></h:outputLabel>
 				<h:panelGroup>
 					<h:inputText id="a_spendenziel"
 						value="#{campaignProducer.selectedCampaign.targetAmount}"
-						validatorMessage="Das Spendenziel für die Aktion muss min. 10 Euro sein.">
+						validatorMessage="#{msg['editCampaign.target_amount_validation']}">
 						<f:convertNumber maxFractionDigits="2" minFractionDigits="2" />
 						<f:validateRequired />
 						<f:validateDoubleRange minimum="10.0" />
@@ -34,11 +34,11 @@
 				</h:panelGroup>
 				<h:message for="a_spendenziel" style="color: red;" />
 
-				<h:outputLabel value="Spendenbetrag:"></h:outputLabel>
+				<h:outputLabel value="#{msg['editCampaign.donation_amount']}:"></h:outputLabel>
 				<h:panelGroup>
 					<h:inputText id="a_spendenbetrag"
 						value="#{campaignProducer.selectedCampaign.donationMinimum}"
-						validatorMessage="Der Spendenbetrag muss min. 1 Euro sein.">
+						validatorMessage="#{msg['editCampaign.donation_amount_validation']}">
 						<f:convertNumber maxFractionDigits="2" minFractionDigits="2" />
 						<f:validateRequired />
 						<f:validateDoubleRange minimum="1.0" />
@@ -47,32 +47,32 @@
 				<h:message for="a_spendenbetrag" style="color: red;" />
 			</h:panelGrid>
 			<h:panelGrid columns="3">
-				<f:facet name="header">Bankverbindung</f:facet>
+				<f:facet name="header">#{msg['editCampaign.bank_account']}</f:facet>
 
-				<h:outputLabel value="Name:"></h:outputLabel>
+				<h:outputLabel value="#{msg['editCampaign.name']}:"></h:outputLabel>
 				<h:inputText id="b_name"
 					value="#{campaignProducer.selectedCampaign.account.name}">
 					<f:validateRequired />
 				</h:inputText>
 				<h:message for="b_name" style="color: red;" />
 
-				<h:outputLabel value="IBAN:"></h:outputLabel>
+				<h:outputLabel value="#{msg['editCampaign.iban']}:"></h:outputLabel>
 				<h:inputText id="b_konto"
 					value="#{campaignProducer.selectedCampaign.account.iban}">
 					<f:validateRequired />
 				</h:inputText>
 				<h:message for="b_konto" style="color: red;" />
 
-				<h:outputLabel value="Name der Bank"></h:outputLabel>
+				<h:outputLabel value="#{msg['editCampaign.name_of_bank']}:"></h:outputLabel>
 				<h:inputText id="b_name_bank"
 					value="#{campaignProducer.selectedCampaign.account.nameOfBank}">
 					<f:validateRequired />
 				</h:inputText>
 				<h:message for="b_name_bank" style="color: red;" />
 			</h:panelGrid>
-			<h:commandButton value="Speichern"
+			<h:commandButton value="#{msg['editCampaign.save']}"
 				action="#{editCampaignController.doSave}" />
-			<h:commandButton value="Abbrechen" immediate="true"
+			<h:commandButton value="#{msg['editCampaign.cancel']}" immediate="true"
 				action="#{editCampaignController.doCancel}" />
 		</h:form>
 	</ui:define>
