--- a/my-aktion/src/main/webapp/listCampaigns.xhtml
+++ b/my-aktion/src/main/webapp/listCampaigns.xhtml
@@ -5,7 +5,7 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	template="/WEB-INF/templates/default.xhtml">
 	<ui:define name="content">
-		<h1>Meine Aktionen</h1>
+		<h1><h:outputText value="#{msg['listCampaigns.my_campaigns']}" /></h1>
 
 		<h:form>
 			<h:dataTable value="#{campaignListProducer.campaigns}" var="campaign">
@@ -15,13 +15,13 @@
 				</h:column>
 				<h:column>
 					<f:facet name="header">
-						<h:outputText value="Name" />
+						<h:outputText value="#{msg['listCampaigns.name']}" />
 					</f:facet>
 					<h:outputText value="#{campaign.name}" />
 				</h:column>
 				<h:column>
 					<f:facet name="header">
-						<h:outputText value="Spendenziel" />
+						<h:outputText value="#{msg['listCampaigns.target_amount']}" />
 					</f:facet>
 					<h:outputText value="#{campaign.targetAmount}">
 						<f:convertNumber type="currency" currencyCode="EUR"/>
@@ -29,26 +29,26 @@
 				</h:column>
 				<h:column>
 					<f:facet name="header">
-						<h:outputText value="bisher gespendet" />
+						<h:outputText value="#{msg['listCampaigns.donated_so_far']}" />
 					</f:facet>
 					<h:outputText value="#{campaign.amountDonatedSoFar}">
 						<f:convertNumber type="currency" currencyCode="EUR"/>
 					</h:outputText>
 				</h:column>
 				<h:column>
-					<h:commandLink value="Editieren"
+					<h:commandLink value="#{msg['listCampaigns.edit']}"
 						action="#{listCampaignsController.doEditCampaign(campaign)}" />
 				</h:column>
 				<h:column>
-					<h:commandLink value="Spendenliste"
+					<h:commandLink value="#{msg['listCampaigns.list_donations']}"
 						action="#{listCampaignsController.doListDonations(campaign)}" />
 				</h:column>
 				<h:column>
-					<h:commandLink value="Formular" 
+					<h:commandLink value="#{msg['listCampaigns.form']}"
 						action="#{listCampaignsController.doEditDonationForm(campaign)}" />
 				</h:column>
 			</h:dataTable>
-			<h:commandButton value="Aktion hinzufügen"
+			<h:commandButton value="#{msg['listCampaigns.add_campaign']}"
 				action="#{listCampaignsController.doAddCampaign}" />
 		</h:form>
 	</ui:define>
