--- a/my-aktion/src/main/webapp/listDonations.xhtml
+++ b/my-aktion/src/main/webapp/listDonations.xhtml
@@ -5,35 +5,32 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	template="/WEB-INF/templates/default.xhtml">
 	<ui:define name="content">
-		<h1>Spenderliste "<h:outputText value="#{campaignProducer.selectedCampaign.name}" />"</h1>
-		
-		<h2>Empfängerkonto: <h:outputText value="#{campaignProducer.selectedCampaign.account.name}" />,
-		IBAN: <h:outputText value="#{campaignProducer.selectedCampaign.account.iban}" />,
-		<h:outputText value="#{campaignProducer.selectedCampaign.account.nameOfBank}" /></h2>
+		<h1><h:outputText value="#{msg['listDonations.donation_list']} '#{campaignProducer.selectedCampaign.name}'" /></h1>
+		<h2><h:outputText value="#{msg['listDonations.beneficiary_account']}: #{campaignProducer.selectedCampaign.account.name}, #{msg['listDonations.iban']}: #{campaignProducer.selectedCampaign.account.iban}, #{campaignProducer.selectedCampaign.account.nameOfBank}" /></h2>
 
 		<h:form>
 			<h:dataTable value="#{campaignProducer.selectedCampaign.donations}" var="donation">
 				<h:column>
 					<f:facet name="header">
-						<h:outputText value="Name" />
+						<h:outputText value="#{msg['listDonations.name']}" />
 					</f:facet>
 					<h:outputText value="#{donation.donorName}" />
 				</h:column>
 				<h:column>
 					<f:facet name="header">
-						<h:outputText value="IBAN" />
+						<h:outputText value="#{msg['listDonations.iban']}" />
 					</f:facet>
 					<h:outputText value="#{donation.account.iban}" />
 				</h:column>
 				<h:column>
 					<f:facet name="header">
-						<h:outputText value="Name der Bank" />
+						<h:outputText value="#{msg['listDonations.name_of_bank']}" />
 					</f:facet>
 					<h:outputText value="#{donation.account.nameOfBank}" />
 				</h:column>
 				<h:column>
 					<f:facet name="header">
-						<h:outputText value="Spendenbetrag" />
+						<h:outputText value="#{msg['listDonations.donation_amount']}" />
 					</f:facet>
 					<h:outputText value="#{donation.amount}">
 						<f:convertNumber type="currency" currencyCode="EUR"/>
@@ -41,9 +38,9 @@
 				</h:column>
 				<h:column>
 					<f:facet name="header">
-						<h:outputText value="Quittung" />
+						<h:outputText value="#{msg['listDonations.receipt']}" />
 					</f:facet>
-					<h:outputText value="#{donation.receiptRequested ? 'ja' : 'nein'}" />
+					<h:outputText value="#{donation.receiptRequested ? msg['listDonations.yes'] : msg['listDonations.no']}" />
 				</h:column>
 				<h:column>
 					<f:facet name="header">
