--- a/my-aktion/src/main/webapp/editDonationForm.xhtml
+++ b/my-aktion/src/main/webapp/editDonationForm.xhtml
@@ -5,7 +5,7 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	template="/WEB-INF/templates/default.xhtml">
 	<ui:define name="content">
-		<h1><h:outputText value="#{msg['editDonationForm.edit_donation_form']}" /></h1>
+		<h1>#{msg['editDonationForm.edit_donation_form']}</h1>
 
 		<h:form>
 
